// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component InlineLoader should render as expected 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          aria-labelledby="loading-icon"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1u7zxmb-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-cay52f-MuiTypography-root"
          id="loading-icon"
        >
          InlineLoader Test
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component InlineLoader should render with styles 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-qiawb8-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          aria-labelledby="loading-icon"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1u7zxmb-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-cay52f-MuiTypography-root"
          id="loading-icon"
        >
          InlineLoader Styled Test
        </span>
      </div>
    </div>
  </div>
</div>
`;
